--- a/examples/example_020_electrolyzer_life/modeling_options.yaml
+++ b/examples/example_020_electrolyzer_life/modeling_options.yaml
@@ -2,17 +2,18 @@ general:
     verbose: False # default
 
 electrolyzer:
-    dt: 1 # default
+    dt: 3600 # default
     initialize: True #
-    initial_power_kW: 1500.
+    initial_power_kW: 1250.
+    
     stack:
-        cell_area: 1500.
+        cell_area: 1500.0
         max_current: 3000
         temperature: 60
         n_cells: 200
         stack_rating_kW: 1250.
         anode_pressure: 101325.
-        cathode_pressure: 3000000.
+        cathode_pressure: 3039750.
         membrane_thickness: 0.03
     control:
         n_stacks: 1
